--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">hilt-dependency-injection</string>
+    <string name="app_name">Hilt Dependency Injection</string>
 </resources>
